--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -15,13 +15,13 @@
 
     <include layout="@layout/common_divider" />
 
-    <com.whzl.mengbi.ui.widget.view.NoScrollViewPager
-        android:id="@+id/viewpager"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="270dp"
         android:layout_marginTop="8dp">
 
-    </com.whzl.mengbi.ui.widget.view.NoScrollViewPager>
+    </FrameLayout>
 
     <View
         android:layout_width="match_parent"
