直播间动画相关抽取

--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -113,10 +113,10 @@
             <android.support.design.widget.CoordinatorLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/btn_contribute"
                 android:layout_marginRight="40dp"
-                android:layout_centerVertical="true">
+                android:layout_toRightOf="@id/btn_contribute">
 
                 <com.whzl.mengbi.ui.widget.view.AutoScrollTextView
                     android:id="@+id/tv_run_way_gift"
@@ -169,8 +169,9 @@
                 android:gravity="center_horizontal"
                 android:paddingTop="25dp"
                 android:singleLine="true"
-                android:textSize="10sp"
-                android:translationX="400dp" />
+                android:textColor="#646464"
+                android:textSize="11sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_stop_tip"
