--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -32,7 +32,8 @@
                 android:hint="@string/live_house_chat_edit_text_hint"
                 android:paddingLeft="20dp"
                 android:paddingRight="7dp"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textColorHint="#cececf"/>
 
             <Button
                 android:id="@+id/btn_input_change"
