--- a/app/src/main/res/layout/dialog_audience_info.xml
+++ b/app/src/main/res/layout/dialog_audience_info.xml
@@ -103,7 +103,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ll_age_container"
-                    android:layout_marginBottom="30dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
@@ -111,52 +110,54 @@
                     android:hint="@string/no_motto_hint"
                     android:maxLines="2"
                     android:singleLine="true"
-                    android:textColor="#9e9e9e" />
+                    android:textColor="#9e9e9e"
+                    android:layout_marginBottom="10dp"/>
 
-                <!--<LinearLayout-->
-                <!--android:id="@+id/ll_option_container"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="50dp"-->
-                <!--android:layout_alignParentBottom="true"-->
-                <!--android:orientation="horizontal">-->
+                <LinearLayout
+                    android:id="@+id/ll_option_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/tv_introduce"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
-                <!--<TextView-->
-                <!--android:id="@+id/tv_ban"-->
-                <!--style="@style/style_audience_info_option_text"-->
-                <!--android:text="@string/ban"-->
-                <!--android:textColor="#f76667"/>-->
+                    <!--<TextView-->
+                        <!--android:id="@+id/tv_ban"-->
+                        <!--style="@style/style_audience_info_option_text"-->
+                        <!--android:text="@string/ban"-->
+                        <!--android:textColor="#f76667" />-->
 
-                <!--<View style="@style/audience_info_option_divider" />-->
+                    <!--<View style="@style/audience_info_option_divider" />-->
 
-                <!--<TextView-->
-                <!--android:id="@+id/tv_kick_out"-->
-                <!--style="@style/style_audience_info_option_text"-->
-                <!--android:text="@string/kick_out"-->
-                <!--android:textColor="#e07434"/>-->
+                    <!--<TextView-->
+                        <!--android:id="@+id/tv_kick_out"-->
+                        <!--style="@style/style_audience_info_option_text"-->
+                        <!--android:text="@string/kick_out"-->
+                        <!--android:textColor="#e07434" />-->
 
-                <!--<View style="@style/audience_info_option_divider" />-->
+                    <!--<View style="@style/audience_info_option_divider" />-->
 
-                <!--<TextView-->
-                <!--android:id="@+id/tv_upgrade"-->
-                <!--style="@style/style_audience_info_option_text"-->
-                <!--android:text="@string/upgrade_room_manager"-->
-                <!--android:textColor="#a96aec"/>-->
+                    <!--<TextView-->
+                        <!--android:id="@+id/tv_upgrade"-->
+                        <!--style="@style/style_audience_info_option_text"-->
+                        <!--android:text="@string/upgrade_room_manager"-->
+                        <!--android:textColor="#a96aec" />-->
 
-                <!--<View style="@style/audience_info_option_divider" />-->
+                    <!--<View style="@style/audience_info_option_divider" />-->
 
-                <!--<TextView-->
-                <!--android:id="@+id/adjust"-->
-                <!--style="@style/style_audience_info_option_text"-->
-                <!--android:text="@string/adjust"-->
-                <!--android:textColor="#337ec1"/>-->
+                    <TextView
+                        android:id="@+id/tv_private_chat"
+                        style="@style/style_audience_info_option_text"
+                        android:text="私聊"
+                        android:textColor="#337ec1" />
 
-                <!--</LinearLayout>-->
+                </LinearLayout>
 
-                <!--<View-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0.5dp"-->
-                <!--android:layout_alignTop="@+id/ll_option_container"-->
-                <!--android:background="#d9d9d9" />-->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_alignTop="@+id/ll_option_container"
+                    android:background="#d9d9d9" />
 
                 <ImageButton
                     android:id="@+id/btn_dismiss"
